packages/theme-default/src/components/calendar/week-grid/date-grid.scss
$overflow-indicator-inline-position: -10px;
$overflow-indicator-width: 10px;
$event-overflow-margin: 10px; // CORRELATION ID: 1

.sx__date-grid {
  display: flex;
  padding-left: var(--sx-calendar-week-grid-padding-left);
}

.sx__date-grid-day {
  width: 100%;
  display: grid;
  grid-gap: 2px;
}

.sx__date-grid-event {
  position: relative;
  display: flex;
  align-items: center;
  padding: var(--sx-spacing-padding1);
  border-radius: var(--sx-rounding-extra-small);
  font-size: clamp(12px, var(--sx-font-extra-small), 14px);
  font-weight: 600;
  user-select: none;

  &:has(.sx__date-grid-event--left-overflow) {
    margin-left: $event-overflow-margin;
  }

  &:has(.sx__date-grid-event--right-overflow) {
    margin-right: $event-overflow-margin;
  }

  @mixin event-overflow-indicator {
    position: absolute;
    z-index: 1;
    width: $overflow-indicator-width;
    height: 100%;
  }

  .sx__date-grid-event--left-overflow {
    @include event-overflow-indicator;

    left: $overflow-indicator-inline-position;
    clip-path: polygon(100% 0, 0 50%, 100% 100%, 100% 0);
  }

  .sx__date-grid-event--right-overflow {
    @include event-overflow-indicator;

    right: $overflow-indicator-inline-position;
    clip-path: polygon(0 0, 100% 50%, 0 100%, 0 0);
  }

  &.sx__date-grid-event--copy {
    z-index: 2;
    box-shadow: var(--sx-box-shadow-level3);
    transition-property: transform, width;
    transition-duration: 0.15s;
    transition-timing-function: ease-in-out;
  }
}

.sx__date-grid-cell {
  height: clamp(20px, 1.25rem, 24px);
}

